--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-rate-limit": "^1.3.0",
     "bson-objectid": "^1.3.0",
     "crc": "^3.8.0",
     "lodash": "^4.17.14",
